# BRASA-API

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/routes/: authentication.py  base.py  endpoints.py  services.py  users.py
src/api/utils/: OAuth2.py
src/core/: auth.py  config.py  constants.py  security.py
src/db/: init_db.py  operations.py
src/models/: authentication.py  base.py  prediction.py  services.py  user.py
src/schemas/: prediction.py
src/services/: some_service.py
tests/test_routes/: test_base.py
