[tool.poetry]
name = "brasa-api"
version = "0.1.0"
description = ""
authors = ["Pedro Fachetti Carvalho <pfachetti.pc@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.scripts]
start = "main:start_server"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
