[tool.poetry]
name = "brasa-api"
version = "0.1.0"
description = ""
authors = ["Pedro Fachetti Carvalho <pfachetti.pc@gmail.com>"]
readme = "README.md"
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
pymongo = "^4.3.3"
motor = "^3.1.2"
beanie = "^1.18.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.0"
flake8 = "^6.0.0"
tox = "^4.4.11"
pre-commit = "^3.2.2"
black = "^23.3.0"
mypy = "^1.2.0"

[tool.poetry.scripts]
start = "main:start_server"

[tool.black]
line-length = 90
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

# for strict mypy: (this is the tricky one :-))
disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
